--- a/.github/workflows/releaseToBioSimulators.yml
+++ b/.github/workflows/releaseToBioSimulators.yml
@@ -2,6 +2,7 @@ name: Build test BioSimulators interface and release to BioSimulators registry
 
 on:
   push:
+  workflow_dispatch:
 
 jobs:
   buildTestDeploy:
@@ -101,20 +102,9 @@ jobs:
       ## Release to BioSimulators registry
       #############################################
 
-      - id: determine-if-release-needed
-        name: Determine if a release should be made
-        run: |
-          release="0"
-
-          if [[ "${{ github.ref }}" =~ ^refs/tags/ ]]; then
-            release="1"
-          fi
-
-          echo "::set-output name=release::$release"
-
       # build Docker image and push to GitHub Container Registry
       - name: Push Docker image
-        if: steps.determine-if-release-needed.outputs.release == '1'
+        if: startsWith(github.ref, 'refs/tags/') || github.event_name == 'workflow_dispatch'
         run: |
           docker login ghcr.io \
             --username ${{ secrets.GHCR_USERNAME }} \
@@ -124,7 +114,7 @@ jobs:
 
       # Submit to BioSimulators registry
       - name: Submit to BioSimulators registry
-        if: steps.determine-if-release-needed.outputs.release == '1'
+        if: startsWith(github.ref, 'refs/tags/') || github.event_name == 'workflow_dispatch'
         run: |
           REVISION=$(git rev-parse HEAD)
           curl \
