--- a/.github/workflows/releaseToBioSimulators.yml
+++ b/.github/workflows/releaseToBioSimulators.yml
@@ -2,7 +2,6 @@ name: Build test BioSimulators interface and release to BioSimulators registry
 
 on:
   push:
-  workflow_dispatch:
 
 jobs:
   buildTestDeploy:
@@ -45,9 +44,8 @@ jobs:
         run: python -m pip install flake8
 
       - name: Lint the package
-        run: |
-          cd biosimulators
-          python -m flake8
+        working-directory: biosimulators
+        run: python -m flake8
 
       #############################################
       ## Get and sync version number
@@ -55,13 +53,11 @@ jobs:
       - id: get-version-number
         name: Get version number
         run: |
-          VERSION=$(cat src/libsbmlsim/version.h | grep LIBSBMLSIM_DOTTED_VERSION | cut -d '"' -f 2)
-          echo "::set-output name=version::$VERSION"
+          SIMULATOR_VERSION=$(cat src/libsbmlsim/version.h | grep LIBSBMLSIM_DOTTED_VERSION | cut -d '"' -f 2)
+          echo "::set-output name=simulatorVersion::$SIMULATOR_VERSION"
 
-      - name: Synchronize Python package with  version number
-        env:
-            VERSION: ${{ steps.get-version-number.outputs.version }}
-        run: echo "__version__ = '${VERSION}'" > biosimulators/biosimulators_libsbmlsim/_version.py
+          VERSION=$(cat biosimulators/biosimulators_libsbmlsim/_version.py | grep __version__ | cut -d "'" -f 2)
+          echo "::set-output name=version::$VERSION"
 
       #############################################
       ## Build Docker image
@@ -75,8 +71,9 @@ jobs:
             --label org.opencontainers.image.revision=${REVISION} \
             --label org.opencontainers.image.created=${CREATED} \
             --build-arg VERSION=${{ steps.get-version-number.outputs.version }} \
-            --tag ghcr.io/${{ github.repository }}/libsbmlsim:${{ steps.get-version-number.outputs.version }} \
-            --tag ghcr.io/${{ github.repository }}/libsbmlsim:latest \
+            --build-arg SIMULATOR_VERSION=${{ steps.get-version-number.outputs.simulatorVersion }} \
+            --tag ghcr.io/biosimulators/biosimulators_libsbmlsim/libsbmlsim:${{ steps.get-version-number.outputs.simulatorVersion }} \
+            --tag ghcr.io/biosimulators/biosimulators_libsbmlsim/libsbmlsim:latest \
             -f biosimulators/Dockerfile \
             .
 
@@ -84,37 +81,139 @@ jobs:
       ## Test
       #############################################
       - name: Run the tests
+        working-directory: biosimulators
         run: |
           cwd=$(pwd)
           docker run \
               --rm \
               --entrypoint bash \
-              --mount type=bind,source=${cwd},target=/root/libsbmlsim \
-              --workdir /root/libsbmlsim/biosimulators \
-              ghcr.io/${{ github.repository }}/libsbmlsim:latest \
+              --mount type=bind,source=${cwd},target=/root/Biosimulators_libsbmlsim \
+              --workdir /root/Biosimulators_libsbmlsim \
+              ghcr.io/biosimulators/biosimulators_libsbmlsim/libsbmlsim:latest \
               -c "
                   pip install pytest pytest-cov \
                   && pip install -r tests/requirements.txt \
                   && python -m pytest tests/ --cov biosimulators_libsbmlsim
               "
 
+      - name: Upload the coverage report to Codecov
+        uses: codecov/codecov-action@v1.0.3
+        working-directory: biosimulators
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          flags: unittests
+          file: ./coverage.xml
+
       #############################################
-      ## Release to BioSimulators registry
+      ## Compile documentation
       #############################################
+      - name: Compile documentation
+        working-directory: biosimulators
+        run: |
+          cwd=$(pwd)
+          docker run \
+              --rm \
+              --entrypoint bash \
+              --mount type=bind,source=${cwd},target=/root/Biosimulators_libsbmlsim \
+              --workdir /root/Biosimulators_libsbmlsim \
+              ghcr.io/biosimulators/biosimulators_libsbmlsim/libsbmlsim:latest \
+              -c "
+                  pip install docs-src/requirements.txt \
+                  && sphinx-apidoc . setup.py --output-dir docs-src/source --force --module-first --no-toc \
+                  && mkdir -p docs-src/_static \
+                  && sphinx-build docs-src docs
+
+      #############################################
+      ## Release
+      #############################################
+
+      # If new tag, commit and push documentation
+      - id: commit-docs
+        name: Commit the compiled documentation
+        if: startsWith(github.ref, 'refs/tags/')
+        working-directory: biosimulators
+        run: |
+          git config --local user.email "biosimulators.daemon@gmail.com"
+          git config --local user.name "biosimulatorsdaemon"
+          git config pull.rebase false
+          git stash
+          git checkout dev
+          git pull
+          set +e
+          git stash pop
+          git add docs
+          git commit -m "Updating compiled documentation"
+          git checkout .
+          git clean -f -d
+          if [[ $? = 0 ]]; then
+            docsChanged=1
+          else
+            docsChanged=0
+          fi
+          echo "::set-output name=docsChanged::$docsChanged"
+
+      - name: Push the compiled documentation
+        if: startsWith(github.ref, 'refs/tags/') && steps.commit-docs.outputs.docsChanged == '1'
+        uses: ad-m/github-push-action@master
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          branch: dev
+
+      # Create GitHub release
+      - name: Create GitHub release
+        if: startsWith(github.ref, 'refs/tags/')
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          tag_name: ${{ steps.get-version-number.outputs.version }}
+          release_name: Release ${{ steps.get-version-number.outputs.version }}
+
+      # Create PyPI release
+      - name: Create PyPI release
+        if: startsWith(github.ref, 'refs/tags/')
+        env:
+          TWINE_USERNAME: __token__
+          TWINE_PASSWORD: ${{ secrets.PYPI_TOKEN }}
+        working-directory: biosimulators
+        run: |
+          # Install pandoc
+          sudo apt-get update -y
+          sudo apt-get install -y --no-install-recommends wget
+
+          wget https://github.com/jgm/pandoc/releases -O /tmp/pandocVersions.html
+          urlPart=`grep "\.deb" /tmp/pandocVersions.html | head -n 1 | cut -d'/' -f2-7 | cut -d'"' -f1`
+          wget "https://github.com/$urlPart" -O /tmp/pandoc.deb
+          sudo dpkg -i /tmp/pandoc.deb
+          rm /tmp/pandocVersions.html
+          rm /tmp/pandoc.deb
+
+          # Convert README to .rst format
+          pandoc --from=gfm --output=README.rst --to=rst README.md
+
+          # Install twine
+          python -m pip install wheel twine
+
+          # Create packages to upload to PyPI
+          python setup.py sdist
+          python setup.py bdist_wheel
+
+          # Upload packages to PyPI
+          twine upload dist/*
 
       # build Docker image and push to GitHub Container Registry
       - name: Push Docker image
-        if: startsWith(github.ref, 'refs/tags/') || github.event_name == 'workflow_dispatch'
+        if: startsWith(github.ref, 'refs/tags/')
         run: |
           docker login ghcr.io \
             --username ${{ secrets.GHCR_USERNAME }} \
             --password ${{ secrets.GHCR_TOKEN }}
-          docker push ghcr.io/${{ github.repository }}/libsbmlsim:${{ steps.get-version-number.outputs.version }}
-          docker push ghcr.io/${{ github.repository }}/libsbmlsim:latest
+          docker push ghcr.io/biosimulators/biosimulators_libsbmlsim/libsbmlsim:${{ steps.get-version-number.outputs.simulatorVersion }}
+          docker push ghcr.io/biosimulators/biosimulators_libsbmlsim/libsbmlsim:latest
 
       # Submit to BioSimulators registry
       - name: Submit to BioSimulators registry
-        if: startsWith(github.ref, 'refs/tags/') || github.event_name == 'workflow_dispatch'
+        if: startsWith(github.ref, 'refs/tags/')
         run: |
           REVISION=$(git rev-parse HEAD)
           curl \
@@ -122,4 +221,4 @@ jobs:
             -u ${{ secrets.BIOSIMULATORS_GH_USERNAME }}:${{ secrets.BIOSIMULATORS_GH_TOKEN }} \
             -H "Accept: application/vnd.github.v3+json" \
             https://api.github.com/repos/biosimulators/Biosimulators/issues \
-            -d "{\"labels\": [\"Validate/submit simulator\"], \"title\": \"Submit LibSBMLsim ${{ steps.get-version-number.outputs.version }}\", \"body\": \"---\nid: libsbmlsim\nversion: ${{ steps.get-version-number.outputs.version }}\nspecificationsUrl: https://raw.githubusercontent.com/${{ github.repository }}/${REVISION}/biosimulators.json\nspecificationsPatch:\n  version: ${{ steps.get-version-number.outputs.version }}\n  image:\n    url: ghcr.io/${{ github.repository }}/libsbmlsim:${{ steps.get-version-number.outputs.version }}\nvalidateImage: true\ncommitSimulator: true\n\n---\"}"
+            -d "{\"labels\": [\"Validate/submit simulator\"], \"title\": \"Submit LibSBMLsim ${{ steps.get-version-number.outputs.simulatorVersion }}\", \"body\": \"---\nid: libsbmlsim\nversion: ${{ steps.get-version-number.outputs.simulatorVersion }}\nspecificationsUrl: https://raw.githubusercontent.com/${{ github.repository }}/${REVISION}/biosimulators.json\nspecificationsPatch:\n  version: ${{ steps.get-version-number.outputs.simulatorVersion }}\n  image:\n    url: ghcr.io/biosimulators/biosimulators_libsbmlsim/libsbmlsim:${{ steps.get-version-number.outputs.simulatorVersion }}\nvalidateImage: true\ncommitSimulator: true\n\n---\"}"
