--- a/.github/workflows/releaseToBioSimulators.yml
+++ b/.github/workflows/releaseToBioSimulators.yml
@@ -86,8 +86,8 @@ jobs:
           docker run \
               --rm \
               --entrypoint bash \
-              --mount type=bind,source=${cwd},target=/root/Biosimulators_libsbmlsim \
-              --workdir /root/Biosimulators_libsbmlsim/biosimulators \
+              --mount type=bind,source=${cwd},target=/root/Biosimulators_LibSBMLSim \
+              --workdir /root/Biosimulators_LibSBMLSim/biosimulators \
               ghcr.io/biosimulators/biosimulators_libsbmlsim/libsbmlsim:latest \
               -c "
                   pip install pytest pytest-cov \
@@ -112,11 +112,11 @@ jobs:
           docker run \
               --rm \
               --entrypoint bash \
-              --mount type=bind,source=${cwd},target=/root/Biosimulators_libsbmlsim \
-              --workdir /root/Biosimulators_libsbmlsim/biosimulators \
+              --mount type=bind,source=${cwd},target=/root/Biosimulators_LibSBMLSim \
+              --workdir /root/Biosimulators_LibSBMLSim/biosimulators \
               ghcr.io/biosimulators/biosimulators_libsbmlsim/libsbmlsim:latest \
               -c "
-                  pip install docs-src/requirements.txt \
+                  pip install -r docs-src/requirements.txt \
                   && sphinx-apidoc . setup.py --output-dir docs-src/source --force --module-first --no-toc \
                   && mkdir -p docs-src/_static \
                   && sphinx-build docs-src ../docs
